Added footer and new css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
 
@@ -20,39 +21,71 @@
     </header>
 
     <section class="container">
-        <div class="columns is-mobile mx-2">        
+        <div class="columns is-mobile mx-2">
             <div class="column">
-                <div class="box mt-5">
+                <div class="box mt-5 has-background-info">
                     <p>Choose your athletes to compare and post them on the court.</p>
                     <input type="text" placeholder="name, team">
                     <button>Search</button>
                 </div>
-            </div>            
+            </div>
         </div>
     </section>
-    <section class="container box mx-4 mt-6">
+    <section class="bball-court container box mx-4 mt-6">
         <div class="columns is-vcentered is-mobile">
-            <figure class="column is-one-quarter image is-128x128">
-                <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-            </figure>
+            <div class="column is-one-quarter">
+                <figure class="image is-128x128">
+                    <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                </figure>
+            </div>
             <div class="column is-one-quarter">
                 <div class="card has-background-danger">
                     <p>stats</p>
                 </div>
             </div>
-                        
+
             <div class="column is-one-quarter">
                 <div class="card has-background-danger">
                     <p>stats</p>
                 </div>
             </div>
-            <figure class="column is-one-quarter image is-128x128">
-                <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-            </figure>
+            <div class="column is-one-quarter">
+                <figure class="image is-128x128">
+                    <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                </figure>
+            </div>
         </div>
     </section>
 
-    <footer></footer>
+    <section class="container has-background-warning">
+        <div class="columns">
+            <div class="column is-one-quarter">
+                <figure class="image is-128x128">
+                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                </figure>
+            </div>
+            <div class="column is-one-quarter">
+                <figure class="image is-128x128">
+                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                </figure>
+            </div>
+            <div class="column is-one-quarter">
+                <figure class="image is-128x128">
+                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                </figure>
+            </div>
+            <div class="column is-one-quarter">
+                <figure class="image is-128x128">
+                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                </figure>
+            </div>
+        </div>
+
+    </section>
+
+    <footer class="container has-background-dark has-text-white">
+        footer
+    </footer>
 
 </body>
 
