added function to button and extrated data from apis

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             <div class="column">
                 <div class="box mt-5 has-background-info">
                     <p>Choose your athletes to compare and post them on the court.</p>
-                    <input id="player-input" type="text" placeholder="name, team">
+                    <input id="player-input" type="text" placeholder="last name" name="search">
                     <button id="search-btn">Search</button>
+                    <div>
+                        <input id="season" type="text" placeholder="year" name="search">
+                    </div>
                 </div>
             </div>
         </div>
