Added new court image and search bar is functioning

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             <div class="column">
                 <div class="box mt-5 has-background-info">
                     <p>Choose your athletes to compare and post them on the court.</p>
-                    <input id="player-input" type="text" placeholder="last name" name="search">
+                    <input id="player-input" type="text" placeholder="players full name" name="search">
                     <button id="search-btn">Search</button>
                     <div>
                         <input id="season" type="text" placeholder="year" name="search">
+                        <div id="first-names"></div>
                     </div>
                 </div>
             </div>
@@ -45,8 +46,8 @@
                     <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
                 </figure>
             </div>
-            <div class="column is-one-quarter">
-                <div id="player1-stats" class="card has-background-danger">
+            <div class="column is-2">
+                <div id="player1-stats" class="card has-background-dark has-text-white">
                     STATS
                 </br>
                     <p>ppg: <span id="p1-ppg-stat"></span></p>
@@ -57,7 +58,7 @@
                     <p>fg %: <span id="p1-fg-stat"></span></p>
                     <p>fg3 %: <span id="p1-fg3-stat"></span></p>                                    
                 </div>
-            </div>
+    <!--        </div>
 
             <div class="column is-one-quarter">
                 <div id="player2-stats" class="card has-background-danger">
@@ -76,12 +77,12 @@
                 <figure id="player2-pic" class="image is-128x128">
                     <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
                 </figure>
-            </div>
+            </div> -->
         </div>
     </section>
 
     <!--Media content-->
-    <section class="container has-background-warning">
+ <!--   <section class="container has-background-warning">
         <div class="columns">
             <div class="media-content column is-one-quarter">
                 <figure class="image is-128x128">
@@ -105,10 +106,10 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
 
     <footer class="container has-background-dark has-text-white">
-        footer
+        Fantastic 4, Inc.
     </footer>
 
     <script src="./assets/js/script.js"></script>
