--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="columns is-mobile has-text-white">
             <div class="column is-5">
                 <h1 class="is-size-1">Who's the Best?</h1>
-                <h3>Compare your favorite athletes</h3>
+                <h3>View you favorite NBA players stats</h3>
             </div>            
         </section>
         
@@ -26,7 +26,7 @@
         <div class="columns is-mobile mx-2">
             <div class="column">
                 <div class="box mt-5 has-background-info">
-                    <p>Choose your athletes to compare and post them on the court.</p>
+                    <p>Choose an NBA player and season.</p>
                     <input id="player-input" type="text" placeholder="players full name" name="search">
                     <button id="search-btn">Search</button>
                     <div>
@@ -42,8 +42,8 @@
     <section id="bball-court" class="container box mx-4 mt-6">
         <div class="columns is-vcentered is-mobile">
             <div class="column is-one-quarter">
-                <figure id="player1-pic" class="image is-128x128">
-                    <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                <figure class="image is-128x128">
+                    <img id="player1-pic" class="is-rounded">
                 </figure>
             </div>
             <div class="column is-2">
@@ -108,8 +108,8 @@
 
     </section> -->
 
-    <footer class="container has-background-dark has-text-white">
-        Fantastic 4, Inc.
+    <footer class="container is-max-widescreen has-background-dark has-text-white">
+        Fantastic 4 Co.
     </footer>
 
     <script src="./assets/js/script.js"></script>
