added edits to footer

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
     </section> -->
 
     <footer class="container is-max-widescreen has-background-dark has-text-white">
-        Fantastic 4 Co.
+        <div class="column is-8">
+            <p class="bd-notification is primary">
+                &copy; Fantastic Four, Inc.
+        </p>
+        </div>
     </footer>
 
     <script src="./assets/js/script.js"></script>
